--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<index.html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -43,7 +43,7 @@
       background: transparent;
     }
 
-    img.logo {
+    hirys.jpg {
       max-width: 718.1px;
       max-height: 131.9px;
       width: auto;
